--- a/site/themes/cyberpunk/layouts/_default/baseof.html
+++ b/site/themes/cyberpunk/layouts/_default/baseof.html
@@ -17,6 +17,9 @@
   <meta name="twitter:description" content="{{ with .Params.description }}{{ . }}{{ else }}{{ .Site.Params.description }}{{ end }}">
   <meta name="twitter:image" content="{{ with .Params.image }}{{ . }}{{ else }}{{ .Site.Params.defaultImage }}{{ end }}">
 
+  <!-- License metadata (non-standard) -->
+  <meta name="license" content="MIT">
+  
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
