--- a/site/themes/cyberpunk/layouts/_default/list.html
+++ b/site/themes/cyberpunk/layouts/_default/list.html
@@ -1,10 +1,8 @@
 {{ define "main" }}
-<section>
-  <h1>{{ .Title }}</h1>
-  <ul>
-    {{ range .Pages }}
-      <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-    {{ end }}
-  </ul>
-</section>
+<h2>{{ .Title }}</h2>
+<ul>
+  {{ range sort .Pages "Title" }}
+    <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+  {{ end }}
+</ul>
 {{ end }}
