--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,8 +1,6 @@
 {{ define "main" }}
-<article class="tool-detail">
-  <h1>{{ .Title }}</h1>
-  <p>{{ .Params.description }}</p>
-  <p><strong>Category:</strong> {{ .Params.category }}</p>
-  <p><a class="btn" href="{{ .Params.url }}" target="_blank">Visit Tool</a></p>
+<article>
+  <h2>{{ .Title }}</h2>
+  {{ .Content }}
 </article>
 {{ end }}
