--- a/site/layouts/_default/terms.html
+++ b/site/layouts/_default/terms.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
-<h2>{{ .Title }}</h2>
+<h2>Categories</h2>
 <ul>
-  {{ range sort .Pages "Title" }}
+  {{ range .Pages }}
     <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
   {{ end }}
 </ul>
